Fix href for anchors

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
   <div class='container p-4 pb-0'>
     <p class='d-flex justify-content-center align-items-center'>
       <span class='me-3'>Register for free and</span>
-      <button type='button' class='btn btn-outline-light btn-rounded'>
+      <a href='bo.php' class='button-secondary'>
         Join the party!
-      </button>
+      </a>
     </p>
   </div>
 
