--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
           <h3>Enthusiast</h3>
           <p class='price'>10€/m</p>
           <p class='tickets'>10 tickets</p>
-          <button class='button-primary'>Choose plan</button>
+          <a href='bo.php'>
+            <button class='button-primary'>Choose plan</button>
+          </a>
         </div>
       </div>
       <div class='col-md-4'>
@@ -140,7 +142,9 @@
           <h3>Passionate</h3>
           <p class='price'>30€/m</p>
           <p class='tickets'>30 tickets</p>
-          <button class='button-primary'>Choose plan</button>
+          <a href='bo.php'>
+            <button class='button-primary'>Choose plan</button>
+          </a>
         </div>
       </div>
       <div class='col-md-4'>
@@ -148,7 +152,9 @@
           <h3>Fanatic</h3>
           <p class='price'>50€/m</p>
           <p class='tickets'>Unlimited tickets</p>
-          <button class='button-primary'>Choose plan</button>
+          <a href='bo.php'>
+            <button class='button-primary'>Choose plan</button>
+          </a>
         </div>
       </div>
     </div>
